# Diploma

./: .gitignore  CMakeLists.txt  English Acyclic Untitled Diagram.xml  English Untitled Diagram.xml  README  Untitled Diagram.xml  amazon.sh  amazon_config_en_big.json  amazon_config_ru_big.json  clone_russe.sh  compile_cpp.sh  config_en_big.json  config_en_small.json  config_ru_big.json  config_ru_big_vectors10.json  config_ru_small.json  configure_locales.sh  evaluate_results.sh  install_jsoncpp.sh  install_prerequisites.sh  install_pypy.sh  main.cpp  prepare_folders.sh  train_raw_model.sh  utils.h
Word2Vec/: word2vec.h
cmake/: common.cmake
config/: config.h
data_structures/: transformations_iterator.h  trie.h  trie_rmq.h
datasets/: eng-rw-dataset.csv  eng-simlex-999.csv  eng-ws353.csv  rus-simlex-999.csv  rus-ws353.csv
logging/: iterable.h  logging.h
managers/: classes_distribution_manager.h  filter_transformation_manager.h  nearest_points_calculator.h  royal_manager.h  transformation_manager.h
python/: demonstrator.py  main.py
python/VectorCalculator/: README  config.json  config_utils.py  interpreter.py  main_all.py  main_all_3cosadd_not_fixed_relationship.py  main_all_equality_components.py  main_all_gensim.py  main_all_pairs_with_fixed_relationship.py  main_all_pairs_with_mincos.py  run_demo_all.sh  run_demo_all_3cosadd_not_fixed_relationship.sh  run_demo_all_equality_components.sh  run_demo_all_gensim.sh  run_demo_all_pairs_with_fixed_relationship.sh  (+1 more)
structures/: transformation.h  vocab.h
types/: types.h
utf/: utf_string.cpp  utf_string.h
(+31 files in other folders)
